@@ -1,1 +1,12 @@
 # uet_dictionary
+Hướng dẫn sử dụng:
+
+- Thêm thư viện JavaFx, SQL, freetts, jsoup
+  + File -> Project Structure
+  + Libraries -> + -> Java
+  + Thêm lib .java của JavaFX, freetts và jsoup
+- Sửa VMOption (
+  + Run -> Edit confinguarations
+  + Modify Option -> VMOption
+  + --module-path path_to_javaFX_lib --add-modules=javafx.controls,javafx.fxml)
+- Sửa đường dẫn đến file CSS thành của bạn
